--- a/contact.html
+++ b/contact.html
@@ -226,6 +226,7 @@
       <li><a href="current-affairs.html">🌐 Current Affairs</a></li>
       <li><a href="gk.html">💡 General Knowledge</a></li>
       <li><a href="dashboard.html" id="mobileDashboardLink" style="display: none;">📊 Dashboard</a></li>
+      <li><a href="contact.html">📧 Contact Us</a></li>
     </ul>
   </nav>
 </header>
