--- a/quiz-history.html
+++ b/quiz-history.html
@@ -296,6 +296,7 @@
         <li><a href="establishment.html">🔄 Establishment MCQ</a></li>
         <li><a href="current-affairs.html">🌐 Current Affairs</a></li>
         <li><a href="gk.html">💡 General Knowledge</a></li>
+        <li><a href="contact.html">📧 Contact Us</a></li>
       </ul>
     </nav>
   </header>
