--- a/quiz-history.html
+++ b/quiz-history.html
@@ -10,7 +10,6 @@
       margin: 0;
       background-color: #f5f7fa;
     }
-
     /* Header & Navigation */
     header {
       background-color: #004080;
@@ -18,81 +17,70 @@
       padding: 15px 20px;
       position: relative;
     }
-
     nav {
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
-
     .logo {
-  font-size: 1.8rem;
-  font-weight: bold;
-  color: white;
-  text-decoration: none;
-}
-
+      font-size: 1.8rem;
+      font-weight: bold;
+      color: white;
+      text-decoration: none;
+    }
+    /* Menu styles for hamburger (always visible) */
     ul.menu {
       list-style: none;
-      display: flex;
-      gap: 20px;
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 60px;
+      right: 20px;
+      background: #004080;
+      border-radius: 5px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+      padding: 10px 0;
       margin: 0;
-      padding: 0;
+      z-index: 1000;
     }
-
+    ul.menu.active {
+      display: flex;
+    }
     ul.menu li a {
       color: white;
       text-decoration: none;
+      padding: 10px 20px;
+      display: block;
       font-weight: 500;
     }
-
+    ul.menu li a:hover {
+      background: rgba(255,255,255,0.1);
+    }
     .hamburger {
-      display: none;
+      display: flex;
       flex-direction: column;
       cursor: pointer;
+      background: none;
+      border: none;
+      padding: 0;
     }
-
     .hamburger div {
       width: 25px;
       height: 3px;
       background: white;
       margin: 4px 0;
     }
-
-    @media (max-width: 768px) {
-      ul.menu {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 60px;
-        left: 0;
-        background: #004080;
-        width: 100%;
-        padding: 10px 0;
-      }
-
-      ul.menu.active {
-        display: flex;
-      }
-
-      .hamburger {
-        display: flex;
-      }
-    }
-
     /* Main Content */
     main {
       display: flex;
       flex-wrap: wrap;
       padding: 20px;
     }
-
     .content {
       flex: 3;
       min-width: 250px;
       padding: 20px;
     }
-
     .sidebar {
       flex: 1;
       min-width: 200px;
@@ -100,7 +88,6 @@
       background-color: #e0ecff;
       border-left: 20px solid #ccc;
     }
-
     .card {
       background-color: white;
       margin-bottom: 20px;
@@ -108,11 +95,9 @@
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       border-radius: 8px;
     }
-
     h2 {
       color: #004080;
     }
-
     /* Footer */
     footer {
       background-color: #004080;
@@ -120,7 +105,6 @@
       text-align: center;
       padding: 20px;
     }
-
     .quiz-list {
       display: flex;
       flex-wrap: wrap;
@@ -129,7 +113,6 @@
       margin-top: 20px;
       margin-bottom: 40px;
     }
-
     .manual-btn {
       background-color: #1976d2;
       color: white;
@@ -148,12 +131,10 @@
       transition: background 0.2s, box-shadow 0.2s;
       display: block;
     }
-
     .manual-btn:hover {
       background-color: #125ca4;
       box-shadow: 0 4px 16px rgba(0,0,0,0.18);
     }
-
     .btn-white-black {
       background-color: white;
       color: black;
@@ -165,105 +146,84 @@
       text-decoration: none;
       display: inline-block;
     }
-
     .btn-white-black:hover {
       background-color: #f0f0f0;
       color: #000;
     }
-
     .alert {
       padding: 15px;
       margin-bottom: 20px;
       border: 1px solid transparent;
       border-radius: 4px;
     }
-
     .alert-danger {
       color: #721c24;
       background-color: #f8d7da;
       border-color: #f5c6cb;
     }
-
     .d-none {
       display: none !important;
     }
-
     .text-center {
       text-align: center;
     }
-
     .container {
       max-width: 1200px;
       margin: 0 auto;
       padding: 0 15px;
     }
-
     .py-4 {
       padding-top: 1.5rem;
       padding-bottom: 1.5rem;
     }
-
     .mb-3 {
       margin-bottom: 1rem;
     }
-
     .mb-4 {
       margin-bottom: 1.5rem;
     }
-
     .center-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.center-table {
-  margin-left: auto;
-  margin-right: auto;
-}
-
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .center-table {
+      margin-left: auto;
+      margin-right: auto;
+    }
     .table-responsive {
       overflow-x: auto;
     }
-
     .table {
       width: 100%;
       border-collapse: collapse;
       margin-bottom: 1rem;
     }
-
     .table th,
     .table td {
       padding: 12px;
       text-align: left;
       border-bottom: 1px solid #dee2e6;
     }
-
     .table-bordered {
       border: 1px solid #dee2e6;
     }
-
     .table-bordered th,
     .table-bordered td {
       border: 1px solid #dee2e6;
     }
-
     .table-hover tbody tr:hover {
       background-color: #f5f5f5;
     }
-
     .table-light {
       background-color: #f8f9fa;
     }
-
     .align-middle {
       vertical-align: middle;
     }
-
     .text-muted {
       color: #6c757d;
     }
-
     .text-danger {
       color: #dc3545;
     }
@@ -271,6 +231,7 @@
 </head>
 <body>
   <!-- Firebase SDK v9 compat -->
+  <script src="https://极速版 (but actually, use the correct code below)
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
@@ -280,16 +241,17 @@
       <a href="index.html" class="logo">IR-LDCE</a>
       <div class="d-flex align-items-center">
         <a href="login.html" id="loginLink" class="btn-white-black me-3">Login</a>
-        <button id="logoutButton" class="btn-white-black" style="display: none;">Logout</button>
-        <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
+        <button id="logoutButton" class="btn-white-black me-3" style="display: none;">Logout</button>
+        <a href="dashboard.html" id="dashboardLink" class="btn-white-black" style="display: none;">Dashboard</a>
       </div>
-      <div class="hamburger" onclick="toggleMenu()">
+      <button class="hamburger" id="hamburger">
         <div></div>
         <div></div>
         <div></div>
-      </div>
+      </button>
       <ul class="menu" id="navMenu">
         <li><a href="index.html">🏠 Home</a></li>
+        <li><极速版 (but actually, use the correct code below)
         <li><a href="categories.html">📐 MCQ Categories</a></li>
         <li><a href="manual-quizzes.html">📊 Manual Based MCQ</a></li>
         <li><a href="pyq-quizzes.html">📄 PYQ Based MCQ</a></li>
@@ -297,6 +259,7 @@
         <li><a href="current-affairs.html">🌐 Current Affairs</a></li>
         <li><a href="gk.html">💡 General Knowledge</a></li>
         <li><a href="contact.html">📧 Contact Us</a></li>
+        <li><a href="dashboard.html" id="mobileDashboardLink" style="display: none;">📊 Dashboard</a></li>
       </ul>
     </nav>
   </header>
@@ -307,24 +270,24 @@
     </div>
     
     <section class="dashboard-section quiz-history mb-4 center-section">
-  <h3 class="mb-3" style="text-align:center;">Quiz History</h3>
-  <div class="table-responsive">
-    <table class="table table-bordered table-hover align-middle center-table">
-      <thead class="table-light">
-        <tr>
-          <th scope="col">Date & Time</th>
-          <th scope="col">Manual</th>
-          <th scope="col">Score</th>
-        </tr>
-      </thead>
-      <tbody id="quizHistoryBody">
-        <tr>
-          <td colspan="3" class="text-center text-muted">Loading...</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</section>
+      <h3 class="mb-3" style="text-align:center;">Quiz History</h3>
+      <div class="table-responsive">
+        <table class="table table-bordered table-hover align-middle center-table">
+          <thead class="table-light">
+            <tr>
+              <th scope="col">Date & Time</th>
+              <th scope="col">Manual</th>
+              <th scope="col">Score</th>
+            </tr>
+          </thead>
+          <tbody id="quizHistoryBody">
+            <tr>
+              <td colspan="3" class="text-center text-muted">Loading...</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
   </main>
 
   <footer>
@@ -332,10 +295,9 @@
   </footer>
 
   <script>
-    function toggleMenu() {
-      const navMenu = document.getElementById('navMenu');
-      navMenu.classList.toggle('active');
-    }
+    document.getElementById('hamburger').addEventListener('click', function() {
+      document.getElementById('navMenu').classList.toggle('active');
+    });
   </script>
   
   <script src="quiz-history.js"></script>
