--- a/quiz-history.html
+++ b/quiz-history.html
@@ -1,168 +1,343 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Quiz History</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
+      background-color: #f5f7fa;
+    }
+
+    /* Header & Navigation */
+    header {
+      background-color: #004080;
+      color: white;
+      padding: 15px 20px;
+      position: relative;
+    }
+
+    nav {
       display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
 
-    /* Sidebar styles */
-    .sidebar {
-      width: 250px;
-      background-color: #333;
+    .logo {
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+}
+
+    ul.menu {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      margin: 0;
+      padding: 0;
+    }
+
+    ul.menu li a {
       color: white;
-      height: 100vh;
-      position: fixed;
-      right: -250px;
-      top: 0;
-      transition: right 0.3s ease;
-      z-index: 1000;
-      padding-top: 60px;
-    }
-
-    .sidebar.show {
-      right: 0;
-    }
-
-    .sidebar a {
-      display: block;
-      color: white;
-      padding: 15px;
       text-decoration: none;
-      border-bottom: 1px solid #444;
-    }
-
-    .sidebar a:hover {
-      background-color: #575757;
-    }
-
-    .main-content {
-      flex-grow: 1;
-      padding: 20px;
-      width: 100%;
+      font-weight: 500;
     }
 
     .hamburger {
-      position: fixed;
-      right: 15px;
-      top: 15px;
-      font-size: 28px;
+      display: none;
+      flex-direction: column;
       cursor: pointer;
-      z-index: 1100;
-      color: #333;
     }
 
-    table {
+    .hamburger div {
+      width: 25px;
+      height: 3px;
+      background: white;
+      margin: 4px 0;
+    }
+
+    @media (max-width: 768px) {
+      ul.menu {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        background: #004080;
+        width: 100%;
+        padding: 10px 0;
+      }
+
+      ul.menu.active {
+        display: flex;
+      }
+
+      .hamburger {
+        display: flex;
+      }
+    }
+
+    /* Main Content */
+    main {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 20px;
+    }
+
+    .content {
+      flex: 3;
+      min-width: 250px;
+      padding: 20px;
+    }
+
+    .sidebar {
+      flex: 1;
+      min-width: 200px;
+      padding: 20px;
+      background-color: #e0ecff;
+      border-left: 20px solid #ccc;
+    }
+
+    .card {
+      background-color: white;
+      margin-bottom: 20px;
+      padding: 15px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      border-radius: 8px;
+    }
+
+    h2 {
+      color: #004080;
+    }
+
+    /* Footer */
+    footer {
+      background-color: #004080;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .quiz-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+      margin-top: 20px;
+      margin-bottom: 40px;
+    }
+
+    .manual-btn {
+      background-color: #1976d2;
+      color: white;
+      font-weight: bold;
+      padding: 18px 20px;
+      border-radius: 12px;
+      text-align: center;
+      min-width: 320px;
+      flex: 1 1 320px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.13);
+      cursor: pointer;
+      border: none;
+      font-size: 1.15rem;
+      margin-bottom: 0;
+      margin-top: 0;
+      transition: background 0.2s, box-shadow 0.2s;
+      display: block;
+    }
+
+    .manual-btn:hover {
+      background-color: #125ca4;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+    }
+
+    .btn-white-black {
+      background-color: white;
+      color: black;
+      border: 1px solid #ccc;
+      font-weight: bold;
+      border-radius: 6px;
+      padding: 6px 12px;
+      transition: background-color 0.3s, color 0.3s;
+      text-decoration: none;
+      display: inline-block;
+    }
+
+    .btn-white-black:hover {
+      background-color: #f0f0f0;
+      color: #000;
+    }
+
+    .alert {
+      padding: 15px;
+      margin-bottom: 20px;
+      border: 1px solid transparent;
+      border-radius: 4px;
+    }
+
+    .alert-danger {
+      color: #721c24;
+      background-color: #f8d7da;
+      border-color: #f5c6cb;
+    }
+
+    .d-none {
+      display: none !important;
+    }
+
+    .text-center {
+      text-align: center;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 15px;
+    }
+
+    .py-4 {
+      padding-top: 1.5rem;
+      padding-bottom: 1.5rem;
+    }
+
+    .mb-3 {
+      margin-bottom: 1rem;
+    }
+
+    .mb-4 {
+      margin-bottom: 1.5rem;
+    }
+
+    .center-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.center-table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+    .table-responsive {
+      overflow-x: auto;
+    }
+
+    .table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 20px;
+      margin-bottom: 1rem;
     }
 
-    th, td {
-      padding: 10px;
+    .table th,
+    .table td {
+      padding: 12px;
       text-align: left;
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1px solid #dee2e6;
     }
 
-    th {
-      background-color: #f2f2f2;
+    .table-bordered {
+      border: 1px solid #dee2e6;
     }
 
-    #logoutBtn, #loginBtn {
-      background-color: #333;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      margin: 10px;
-      cursor: pointer;
-      display: none;
+    .table-bordered th,
+    .table-bordered td {
+      border: 1px solid #dee2e6;
+    }
+
+    .table-hover tbody tr:hover {
+      background-color: #f5f5f5;
+    }
+
+    .table-light {
+      background-color: #f8f9fa;
+    }
+
+    .align-middle {
+      vertical-align: middle;
+    }
+
+    .text-muted {
+      color: #6c757d;
+    }
+
+    .text-danger {
+      color: #dc3545;
     }
   </style>
 </head>
 <body>
-  <div class="hamburger" onclick="toggleSidebar()">☰</div>
+  <!-- Firebase SDK v9 compat -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
-  <div class="sidebar" id="sidebar">
-    <a href="dashboard.html">Dashboard</a>
-    <a href="quiz.html">Take Quiz</a>
-    <a href="quiz-history.html">Quiz History</a>
-    <a href="establishment.html">Establishment</a>
-    <a href="#" id="loginBtn" onclick="login()">Login</a>
-    <a href="#" id="logoutBtn" onclick="logout()">Logout</a>
-  </div>
+  <header>
+    <nav>
+      <a href="index.html" class="logo">IR-LDCE</a>
+      <div class="d-flex align-items-center">
+        <a href="login.html" id="loginLink" class="btn-white-black me-3">Login</a>
+        <button id="logoutButton" class="btn-white-black" style="display: none;">Logout</button>
+        <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
+      </div>
+      <div class="hamburger" onclick="toggleMenu()">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <ul class="menu" id="navMenu">
+        <li><a href="index.html">🏠 Home</a></li>
+        <li><a href="categories.html">📐 MCQ Categories</a></li>
+        <li><a href="manual-quizzes.html">📊 Manual Based MCQ</a></li>
+        <li><a href="pyq-quizzes.html">📄 PYQ Based MCQ</a></li>
+        <li><a href="establishment.html">🔄 Establishment MCQ</a></li>
+        <li><a href="current-affairs.html">🌐 Current Affairs</a></li>
+        <li><a href="gk.html">💡 General Knowledge</a></li>
+        <li><a href="contact.html">📧 Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <div class="main-content">
-    <h1>Quiz History</h1>
-    <table id="quizHistoryTable">
-      <thead>
+  <main class="dashboard-container container py-4">
+    <div id="error-message" class="alert alert-danger text-center d-none">
+      You are not logged in. <a href="login.html">Go to login</a>
+    </div>
+    
+    <section class="dashboard-section quiz-history mb-4 center-section">
+  <h3 class="mb-3" style="text-align:center;">Quiz History</h3>
+  <div class="table-responsive">
+    <table class="table table-bordered table-hover align-middle center-table">
+      <thead class="table-light">
         <tr>
-          <th>Quiz Title</th>
-          <th>Score</th>
-          <th>Date</th>
+          <th scope="col">Date & Time</th>
+          <th scope="col">Manual</th>
+          <th scope="col">Score</th>
         </tr>
       </thead>
       <tbody id="quizHistoryBody">
-        <!-- Dynamic content inserted by quiz-history.js -->
+        <tr>
+          <td colspan="3" class="text-center text-muted">Loading...</td>
+        </tr>
       </tbody>
     </table>
   </div>
+</section>
+  </main>
 
-  <!-- Firebase scripts -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js"></script>
+  <footer>
+    &copy; 2025 IR-LDCE. All Rights Reserved.
+  </footer>
 
-  <!-- Firebase config (only if not already initialized in quiz-history.js) -->
   <script>
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-      appId: "YOUR_APP_ID"
-    };
-    if (!firebase.apps.length) {
-      firebase.initializeApp(firebaseConfig);
+    function toggleMenu() {
+      const navMenu = document.getElementById('navMenu');
+      navMenu.classList.toggle('active');
     }
   </script>
-
-  <!-- Your JS for sidebar & auth handling -->
-  <script>
-    function toggleSidebar() {
-      document.getElementById("sidebar").classList.toggle("show");
-    }
-
-    function login() {
-      window.location.href = "login.html";
-    }
-
-    function logout() {
-      firebase.auth().signOut().then(() => {
-        window.location.href = "login.html";
-      });
-    }
-
-    firebase.auth().onAuthStateChanged((user) => {
-      const loginBtn = document.getElementById("loginBtn");
-      const logoutBtn = document.getElementById("logoutBtn");
-
-      if (user) {
-        loginBtn.style.display = "none";
-        logoutBtn.style.display = "block";
-      } else {
-        logoutBtn.style.display = "none";
-        loginBtn.style.display = "block";
-      }
-    });
-  </script>
-
-  <!-- Load your existing Firebase logic -->
+  
   <script src="quiz-history.js"></script>
 </body>
 </html>
