--- a/quiz-history.html
+++ b/quiz-history.html
@@ -3,341 +3,190 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Quiz History</title>
+  <title>Quiz History - IR-LDCE</title>
+  <link rel="stylesheet" href="style.css"/>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
+  <script src="/firebase-init.js" defer></script>
+  <script src="/quiz-history.js" defer></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background-color: #f5f7fa;
-    }
-
-    /* Header & Navigation */
-    header {
-      background-color: #004080;
+    .header {
+      background-color: #003366;
       color: white;
-      padding: 15px 20px;
-      position: relative;
-    }
-
-    nav {
+      padding: 10px;
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
 
     .logo {
-  font-size: 1.8rem;
-  font-weight: bold;
-  color: white;
-  text-decoration: none;
-}
-
-    ul.menu {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-      margin: 0;
-      padding: 0;
+      font-weight: bold;
+      font-size: 24px;
+      margin-left: 10px;
     }
 
-    ul.menu li a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
+    .nav-buttons {
+      display: flex;
+      gap: 10px;
+      margin-right: 10px;
+    }
+
+    .nav-buttons button {
+      padding: 5px 15px;
+      font-weight: bold;
+      border: none;
+      border-radius: 5px;
+      background: white;
+      cursor: pointer;
     }
 
     .hamburger {
-      display: none;
-      flex-direction: column;
+      font-size: 24px;
+      color: white;
       cursor: pointer;
-    }
-
-    .hamburger div {
-      width: 25px;
-      height: 3px;
-      background: white;
-      margin: 4px 0;
-    }
-
-    @media (max-width: 768px) {
-      ul.menu {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 60px;
-        left: 0;
-        background: #004080;
-        width: 100%;
-        padding: 10px 0;
-      }
-
-      ul.menu.active {
-        display: flex;
-      }
-
-      .hamburger {
-        display: flex;
-      }
-    }
-
-    /* Main Content */
-    main {
-      display: flex;
-      flex-wrap: wrap;
-      padding: 20px;
-    }
-
-    .content {
-      flex: 3;
-      min-width: 250px;
-      padding: 20px;
+      margin-right: 10px;
     }
 
     .sidebar {
-      flex: 1;
-      min-width: 200px;
+      display: none;
+      position: absolute;
+      top: 60px;
+      right: 0;
+      background-color: #003366;
+      width: 200px;
+      z-index: 1000;
+      padding: 10px 0;
+      border-radius: 5px;
+    }
+
+    .sidebar a {
+      display: block;
+      padding: 10px 20px;
+      color: white;
+      text-decoration: none;
+    }
+
+    .sidebar a:hover {
+      background-color: #0055aa;
+    }
+
+    .content {
       padding: 20px;
-      background-color: #e0ecff;
-      border-left: 20px solid #ccc;
     }
 
     .card {
-      background-color: white;
-      margin-bottom: 20px;
-      padding: 15px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      border-radius: 8px;
-    }
-
-    h2 {
-      color: #004080;
-    }
-
-    /* Footer */
-    footer {
-      background-color: #004080;
-      color: white;
-      text-align: center;
+      background-color: #fff;
       padding: 20px;
+      margin: auto;
+      max-width: 700px;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
 
-    .quiz-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-      margin-top: 20px;
-      margin-bottom: 40px;
-    }
-
-    .manual-btn {
-      background-color: #1976d2;
-      color: white;
-      font-weight: bold;
-      padding: 18px 20px;
-      border-radius: 12px;
-      text-align: center;
-      min-width: 320px;
-      flex: 1 1 320px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.13);
-      cursor: pointer;
-      border: none;
-      font-size: 1.15rem;
-      margin-bottom: 0;
-      margin-top: 0;
-      transition: background 0.2s, box-shadow 0.2s;
-      display: block;
-    }
-
-    .manual-btn:hover {
-      background-color: #125ca4;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.18);
-    }
-
-    .btn-white-black {
-      background-color: white;
-      color: black;
-      border: 1px solid #ccc;
-      font-weight: bold;
-      border-radius: 6px;
-      padding: 6px 12px;
-      transition: background-color 0.3s, color 0.3s;
-      text-decoration: none;
-      display: inline-block;
-    }
-
-    .btn-white-black:hover {
-      background-color: #f0f0f0;
-      color: #000;
-    }
-
-    .alert {
-      padding: 15px;
-      margin-bottom: 20px;
-      border: 1px solid transparent;
-      border-radius: 4px;
-    }
-
-    .alert-danger {
-      color: #721c24;
-      background-color: #f8d7da;
-      border-color: #f5c6cb;
-    }
-
-    .d-none {
-      display: none !important;
-    }
-
-    .text-center {
-      text-align: center;
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 15px;
-    }
-
-    .py-4 {
-      padding-top: 1.5rem;
-      padding-bottom: 1.5rem;
-    }
-
-    .mb-3 {
-      margin-bottom: 1rem;
-    }
-
-    .mb-4 {
-      margin-bottom: 1.5rem;
-    }
-
-    .center-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.center-table {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-    .table-responsive {
-      overflow-x: auto;
-    }
-
-    .table {
+    table {
       width: 100%;
       border-collapse: collapse;
-      margin-bottom: 1rem;
+      margin-top: 10px;
     }
 
-    .table th,
-    .table td {
-      padding: 12px;
-      text-align: left;
-      border-bottom: 1px solid #dee2e6;
+    table, th, td {
+      border: 1px solid #ccc;
     }
 
-    .table-bordered {
-      border: 1px solid #dee2e6;
+    th, td {
+      padding: 8px;
+      text-align: center;
     }
 
-    .table-bordered th,
-    .table-bordered td {
-      border: 1px solid #dee2e6;
-    }
-
-    .table-hover tbody tr:hover {
+    th {
       background-color: #f5f5f5;
     }
 
-    .table-light {
-      background-color: #f8f9fa;
+    footer {
+      text-align: center;
+      background-color: #003366;
+      color: white;
+      padding: 10px;
+      position: relative;
+      bottom: 0;
+      width: 100%;
+      margin-top: 30px;
     }
 
-    .align-middle {
-      vertical-align: middle;
-    }
-
-    .text-muted {
-      color: #6c757d;
-    }
-
-    .text-danger {
-      color: #dc3545;
+    @media screen and (max-width: 768px) {
+      .nav-buttons {
+        display: none;
+      }
     }
   </style>
 </head>
 <body>
-  <!-- Firebase SDK v9 compat -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
-  <header>
-    <nav>
-      <a href="index.html" class="logo">IR-LDCE</a>
-      <div class="d-flex align-items-center">
-        <a href="login.html" id="loginLink" class="btn-white-black me-3">Login</a>
-        <button id="logoutButton" class="btn-white-black" style="display: none;">Logout</button>
-        <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
-      </div>
-      <div class="hamburger" onclick="toggleMenu()">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <ul class="menu" id="navMenu">
-        <li><a href="index.html">🏠 Home</a></li>
-        <li><a href="categories.html">📐 MCQ Categories</a></li>
-        <li><a href="manual-quizzes.html">📊 Manual Based MCQ</a></li>
-        <li><a href="pyq-quizzes.html">📄 PYQ Based MCQ</a></li>
-        <li><a href="establishment.html">🔄 Establishment MCQ</a></li>
-        <li><a href="current-affairs.html">🌐 Current Affairs</a></li>
-        <li><a href="gk.html">💡 General Knowledge</a></li>
-        <li><a href="contact.html">📧 Contact Us</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main class="dashboard-container container py-4">
-    <div id="error-message" class="alert alert-danger text-center d-none">
-      You are not logged in. <a href="login.html">Go to login</a>
+  <div class="header">
+    <div class="logo">IR-LDCE</div>
+    <div class="nav-buttons">
+      <button id="loginBtn" onclick="location.href='login.html'">Login</button>
+      <button id="logoutBtn" onclick="logout()">Logout</button>
+      <button onclick="location.href='dashboard.html'">Dashboard</button>
     </div>
-    
-    <section class="dashboard-section quiz-history mb-4 center-section">
-  <h3 class="mb-3" style="text-align:center;">Quiz History</h3>
-  <div class="table-responsive">
-    <table class="table table-bordered table-hover align-middle center-table">
-      <thead class="table-light">
-        <tr>
-          <th scope="col">Date & Time</th>
-          <th scope="col">Manual</th>
-          <th scope="col">Score</th>
-        </tr>
-      </thead>
-      <tbody id="quizHistoryBody">
-        <tr>
-          <td colspan="3" class="text-center text-muted">Loading...</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="hamburger" onclick="toggleSidebar()">☰</div>
   </div>
-</section>
-  </main>
 
-  <footer>
-    &copy; 2025 IR-LDCE. All Rights Reserved.
-  </footer>
+  <div class="sidebar" id="sidebarMenu">
+    <a href="index.html">🏠 Home</a>
+    <a href="mcq-categories.html">📂 MCQ Categories</a>
+    <a href="manual-based.html">📘 Manual Based MCQ</a>
+    <a href="pyq-based.html">📄 PYQ Based MCQ</a>
+    <a href="establishment.html">📋 Establishment MCQ</a>
+    <a href="current-affairs.html">🌐 Current Affairs</a>
+    <a href="gk.html">💡 General Knowledge</a>
+    <a href="dashboard.html">📊 Dashboard</a>
+    <a href="contact.html">📧 Contact Us</a>
+  </div>
+
+  <div class="content">
+    <div class="card">
+      <h2>Quiz History</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Date & Time</th>
+            <th>Manual</th>
+            <th>Score</th>
+          </tr>
+        </thead>
+        <tbody id="quizHistoryBody">
+          <!-- Rows will be populated by quiz-history.js -->
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <footer>© 2025 IR-LDCE. All Rights Reserved.</footer>
 
   <script>
-    function toggleMenu() {
-      const navMenu = document.getElementById('navMenu');
-      navMenu.classList.toggle('active');
+    function toggleSidebar() {
+      const menu = document.getElementById("sidebarMenu");
+      menu.style.display = (menu.style.display === "block") ? "none" : "block";
     }
+
+    function logout() {
+      firebase.auth().signOut().then(() => {
+        window.location.href = "login.html";
+      });
+    }
+
+    firebase.auth().onAuthStateChanged(user => {
+      if (user) {
+        document.getElementById("logoutBtn").style.display = "inline-block";
+        document.getElementById("loginBtn").style.display = "none";
+      } else {
+        document.getElementById("logoutBtn").style.display = "none";
+        document.getElementById("loginBtn").style.display = "inline-block";
+      }
+    });
   </script>
-  
-  <script src="quiz-history.js"></script>
+
 </body>
 </html>
