--- a/quiz-history.html
+++ b/quiz-history.html
@@ -210,11 +210,17 @@
     .mb-4 {
       margin-bottom: 1.5rem;
     }
+    .table-responsive {
+  display: flex;
+  justify-content: center;
+}
 
    .quiz-history table {
-  width: 100%;
+  width: 95%;
+  max-width: 1000px;
   border-collapse: collapse;
   margin-top: 10px;
+  margin: 0 auto;  
   table-layout: auto;
   word-break: break-word;
   background-color: #ffffff;
