--- a/quiz-history.html
+++ b/quiz-history.html
@@ -213,11 +213,12 @@
     .table-responsive {
   display: flex;
   justify-content: center;
+  padding: 20px;
 }
 
  .quiz-history table {
   width: 100%;
-  max-width: 1000px;
+  max-width: 700px;
   border-collapse: collapse;
   margin: 0 auto;
   table-layout: auto;
