--- a/quiz-history.html
+++ b/quiz-history.html
@@ -305,9 +305,9 @@
     
     <section class="dashboard-section quiz-history mb-4 center-section">
   <h3 class="mb-3" style="text-align:center;">Quiz History</h3>
-  <div class="table-responsive">
-    <table class="table table-bordered table-hover align-middle center-table">
-      <thead class="table-light">
+  <div class="table-responsive"style="max-width: 800px; width: 100%;">>
+    <table class="table table-bordered table-hover align-middle mb-0">
+      <thead class="table-light text-center">
         <tr>
           <th scope="col">Date & Time</th>
           <th scope="col">Manual</th>
