--- a/quiz-history.html
+++ b/quiz-history.html
@@ -264,6 +264,19 @@
     .text-danger {
       color: #dc3545;
     }
+    .center-section {
+  display: flex;
+  justify-content: center;
+}
+
+.table-responsive {
+  width: 100%;
+  max-width: 800px;
+}
+
+.center-table {
+  margin: 0 auto;
+}
   </style>
 </head>
 <body>
