--- a/quiz-history.html
+++ b/quiz-history.html
@@ -214,6 +214,8 @@
   display: flex;
   justify-content: center;
   padding: 20px;
+  width: 100%;
+  max-width: 800px;
 }
 
  .quiz-history table {
@@ -269,10 +271,6 @@
   justify-content: center;
 }
 
-.table-responsive {
-  width: 100%;
-  max-width: 800px;
-}
 
 .center-table {
   margin: 0 auto;
@@ -318,7 +316,7 @@
     
     <section class="dashboard-section quiz-history mb-4 center-section">
   <h3 class="mb-3" style="text-align:center;">Quiz History</h3>
-  <div class="table-responsive"style="max-width: 800px; width: 100%;">>
+  <div class="table-responsive" style="max-width: 800px; width: 100%;">
     <table class="table table-bordered table-hover align-middle mb-0">
       <thead class="table-light text-center">
         <tr>
