--- a/quiz-history.html
+++ b/quiz-history.html
@@ -316,7 +316,7 @@
     
     <section class="dashboard-section quiz-history mb-4 center-section">
   <h3 class="mb-3" style="text-align:center;">Quiz History</h3>
-  <div class="table-responsive" style="max-width: 800px; width: 100%;">
+  <div class="table-responsive">
     <table class="table table-bordered table-hover align-middle mb-0">
       <thead class="table-light text-center">
         <tr>
