--- a/quiz-history.html
+++ b/quiz-history.html
@@ -218,42 +218,43 @@
   max-width: 800px;
 }
 
- .quiz-history table {
+ .table-wrapper {
+  display: flex;
+  justify-content: center;
   width: 100%;
-  max-width: 700px;
-  border-collapse: collapse;
-  margin: 0 auto;
-  table-layout: auto;
-  word-break: break-word;
-  background-color: #ffffff;
-  border-radius: 8px;
-  overflow: hidden;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.05);
 }
 
-
-.quiz-history th, .quiz-history td {
-  padding: 12px 16px;
+.quiz-table {
+  width: 100%;
+  max-width: 800px;
+  border-collapse: collapse;
+  background-color: white;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+  border-radius: 8px;
+  overflow: hidden;
   text-align: center;
-  font-size: 0.95em;
+}
+
+.quiz-table th,
+.quiz-table td {
+  padding: 12px 16px;
   border-bottom: 1px solid #e0e0e0;
 }
 
-.quiz-history th {
+.quiz-table th {
   background-color: #004080;
-  color: #ffffff;
+  color: white;
   font-weight: bold;
   text-transform: uppercase;
 }
 
-.quiz-history tbody tr:nth-child(even) {
+.quiz-table tr:nth-child(even) {
   background-color: #f9f9f9;
 }
 
-.quiz-history tbody tr:hover {
+.quiz-table tr:hover {
   background-color: #e6f0ff;
 }
-
 
     .align-middle {
       vertical-align: middle;
@@ -266,15 +267,7 @@
     .text-danger {
       color: #dc3545;
     }
-    .center-section {
-  display: flex;
-  justify-content: center;
-}
-
-
-.center-table {
-  margin: 0 auto;
-}
+  
   </style>
 </head>
 <body>
@@ -309,31 +302,32 @@
     </nav>
   </header>
 
-  <main class="dashboard-container container py-4">
-    <div id="error-message" class="alert alert-danger text-center d-none">
-      You are not logged in. <a href="login.html">Go to login</a>
-    </div>
-    
-    <section class="dashboard-section quiz-history mb-4 center-section">
-  <h3 class="mb-3" style="text-align:center;">Quiz History</h3>
-  <div class="table-responsive">
-    <table class="table table-bordered table-hover align-middle mb-0">
-      <thead class="table-light text-center">
-        <tr>
-          <th scope="col">Date & Time</th>
-          <th scope="col">Manual</th>
-          <th scope="col">Score</th>
-        </tr>
-      </thead>
-      <tbody id="quizHistoryBody">
-        <tr>
-          <td colspan="3" class="text-center text-muted">Loading...</td>
-        </tr>
-      </tbody>
-    </table>
+<main class="dashboard-container container py-4">
+  <div id="error-message" class="alert alert-danger text-center d-none">
+    You are not logged in. <a href="login.html">Go to login</a>
   </div>
-</section>
-  </main>
+
+  <section class="dashboard-section quiz-history mb-4">
+    <h3 class="mb-3 text-center">Quiz History</h3>
+    <div class="table-wrapper">
+      <table class="quiz-table">
+        <thead>
+          <tr>
+            <th>Date & Time</th>
+            <th>Manual</th>
+            <th>Score</th>
+          </tr>
+        </thead>
+        <tbody id="quizHistoryBody">
+          <tr>
+            <td colspan="3" class="text-center text-muted">Loading...</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
+</main>
+
 
   <footer>
     &copy; 2025 IR-LDCE. All Rights Reserved.
