--- a/quiz-history.html
+++ b/quiz-history.html
@@ -50,7 +50,7 @@
     .quiz-table tr:hover { background-color: #e6f0ff; }
     .align-middle { vertical-align: middle; }
     .text-muted { color: #6c757d; }
-    .text-danger { color: #dc3545; }
+    .text-danger { color: #21c3545; }
   </style>
 </head>
 <body>
@@ -113,6 +113,8 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+  <!-- Firebase Configuration -->
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
@@ -121,49 +123,18 @@
       appId: "1:765334603137:web:1c8a13f6086a6773c2d480"
     };
     firebase.initializeApp(firebaseConfig);
+    // Expose Firestore for quiz-history.js
+    const db = firebase.firestore();
   </script>
-  <script>
-    const auth = firebase.auth();
-    const loginLink = document.getElementById("loginLink");
-    const logoutButton = document.getElementById("logoutButton");
-    const dashboardLink = document.getElementById("dashboardLink");
-    const errorMessage = document.getElementById("error-message");
-    const quizHistorySection = document.querySelector(".quiz-history");
 
-    // Listen for auth state changes
-    auth.onAuthStateChanged((user) => {
-      if (user) {
-        loginLink.style.display = "none";
-        logoutButton.style.display = "inline-block";
-        dashboardLink.style.display = "inline-block";
-        errorMessage.classList.add("d-none");
-        quizHistorySection.style.display = "block";
-        // Optionally call a function to load quiz history here
-        // loadQuizHistory();
-      } else {
-        loginLink.style.display = "inline";
-        logoutButton.style.display = "none";
-        dashboardLink.style.display = "none";
-        errorMessage.classList.remove("d-none");
-        quizHistorySection.style.display = "none";
-      }
-    });
-
-    // Handle logout
-    logoutButton.addEventListener("click", () => {
-      auth.signOut().then(() => {
-        console.log("User signed out");
-      }).catch((error) => {
-        console.error("Sign out error", error);
-      });
-    });
-  </script>
+  <!-- Hamburger Menu Toggle -->
   <script>
-    // Toggle menu on hamburger click
     document.getElementById('hamburger').addEventListener('click', function() {
       document.getElementById('navMenu').classList.toggle('active');
     });
   </script>
+
+  <!-- Load Quiz History Logic -->
   <script src="quiz-history.js"></script>
 </body>
 </html>
