--- a/quiz-history.html
+++ b/quiz-history.html
@@ -61,8 +61,8 @@
         <a href="login.html" id="loginLink" class="btn-white-black me-3">Login</a>
         <button id="logoutButton" class="btn-white-black" style="display: none;">Logout</button>
         <a href="dashboard.html" id="dashboardLink" class="btn btn-sm btn-white-black" style="display: none;">Dashboard</a>
-        <!-- OPTIONAL: Uncomment if you want to use mobileDashboardLink in JS -->
-        <!-- <a href="#" id="mobileDashboardLink" style="display:none;">Mobile Dashboard</a> -->
+        <!-- REQUIRED: Your JS expects this element (if you use mobileDashboardLink in your JS) -->
+        <a href="#" id="mobileDashboardLink" style="display:none;">Mobile Dashboard</a>
       </div>
       <button class="hamburger" id="hamburger">
         <div></div>
